Windows Render command line Cycles Crash! #42349

Closed
opened 2014-10-22 17:55:58 +02:00 by Eugenio Pignataro · 15 comments

Windows 7 x64
Tested in several machines.

Broken ba7e504
Worked: about 15 days before, I will update this information.

Blender crash with the classic render command line http://wiki.blender.org/index.php/Doc:2.6/Manual/Render/Command_Line
Tested on linux, work fine!!!
Cycles engine crash, Internal work fine.

  • Create a new scene with the default cube.
  • Save scene.
  • Make a .bat , example for me MYSCENE.blend -x 1 -o //RENDERS/ -s 1 -e 10 -a
  • Run .bat crash!!!

Thanks a bunch!

Windows 7 x64 Tested in several machines. Broken ba7e504 Worked: about 15 days before, I will update this information. Blender crash with the classic render command line http://wiki.blender.org/index.php/Doc:2.6/Manual/Render/Command_Line Tested on linux, work fine!!! Cycles engine crash, Internal work fine. - Create a new scene with the default cube. - Save scene. - Make a .bat , example for me MYSCENE.blend -x 1 -o //RENDERS/ -s 1 -e 10 -a - Run .bat crash!!! Thanks a bunch!
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @EugenioPignataro

Added subscriber: @EugenioPignataro
Author
Member

working version 1dd428f

working version 1dd428f

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Can confirm the crash. (553ec98 on Windows 7 x64)

Command:
blender -b default.blend -x 1 -o /RENDERS/ -s 1 -e 10 -a

Can confirm the crash. (553ec98 on Windows 7 x64) Command: blender -b default.blend -x 1 -o /RENDERS/ -s 1 -e 10 -a

Added subscriber: @ideasman42

Added subscriber: @ideasman42

@ThomasDinges, could you get a backtrace?

@ThomasDinges, could you get a backtrace?

Can't redo this bug, tested with a debug build 5e6d878318 and 2.72b

The system I tested on had no cuda support however.

Can't redo this bug, tested with a debug build 5e6d878318 and `2.72b` The system I tested on had no cuda support however.
Author
Member

Hi guys!!! thank you for help us!
The problem appear only in windows, cycles no cuda.

I will try again...

Hi guys!!! thank you for help us! The problem appear only in windows, cycles no cuda. I will try again...
Author
Member

Confirmed, I tested and the bug still alive.
625843d

Thanks!

Confirmed, I tested and the bug still alive. 625843d Thanks!

Things to test

  • Does this happen with CUDA/CPU? (try testing different output)
  • If you run blender-app.exe does it work?
  • Does threading setting make any difference?
Things to test - Does this happen with CUDA/CPU? (try testing different output) - If you run `blender-app.exe` does it work? - Does threading setting make any difference?

This issue was referenced by 95687f9751

This issue was referenced by 95687f9751cae08b14d815656261c069aec41238

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 95687f9751.

Closed by commit 95687f9751.
Author
Member

Thanks a bunch guys!!!

Greetings!

Thanks a bunch guys!!! Greetings!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42349
No description provided.